# security-test-codes

./: .gitignore  README.md  app.py  code.py  code_back1.py  code_back2.py  code_back3.py  code_back4.py  code_back5.py  code_back6.py  code_back7.py  code_back8.py  code_back9.py  test.db
images/: test_image.txt
java/: pom.xml
javaTest/: CWE_113_HTTP_Response_Splitting_Sample.java  CWE_134_Format_String_Sample.java  CWE_190_Integer_Overflow_Sample.java  CWE_209_Information_Exposure.java  CWE_22_Path_Traversal_Sample.java  CWE_259_Hardcoded_Credential_Sample.java  CWE_285_Improper_Authorization_Sample.java  CWE_295_Improper_Certificate_Sample.java  CWE_306_MIssing_Authentication_Sample.java  CWE_312_Cleartext_Storage_Sample.java  CWE_319_Cleartext_Transmission_Sample.java  CWE_321_Hardcoded_Key_Sample.java  CWE_326_Inadequate_Encryption_Strength_Sample.java  CWE_327_Weak_Crypto_Algorithm_Sample.java  CWE_330_Insecure_Random_Sample.java  CWE_347_Improper_Signature_Sample.java  CWE_352_CSRF_Sample.java  CWE_367_Bypass_Demo.java  CWE_367_TOCTOU_Demo.java  CWE_367_TOCTOU_Sample.java  CWE_390_Bypass_Demo.java  CWE_390_Error_Without_Action.java  CWE_404_Resource_Leak_Sample.java  CWE_416_Use_After_Free_Sample.java  CWE_434_Unsafe_FileUpload_Sample.java  CWE_457_Uninitialized_Variable_Sample.java  CWE_476_Null_Pointer_Sample.java  CWE_494_Unverified_Download_Sample.java  CWE_611_XXE_Sample.java  (+22 more)
projectTest/python/vuln_project_backup/: pyproject.toml
projectTest/python/vuln_project_backup/core/: views.py
projectTest/python/vuln_project_backup/vuln_project/: urls.py
(+179 files in other folders)
