[tool.poetry]
name = "vuln-project"
version = "0.1.0"
description = "SCA Vulnerability and License Test Project"
authors = ["Security QA <qa@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# 1. 웹 프레임워크 취약점
Django = "4.1.0"          # CVE-2023-31047 (XSS)
requests = "2.28.0"       # Leakage 취약점
PyYAML = "5.3.1"          # RCE (임의 코드 실행)

# 2. 데이터/AI 생태계 취약점 (스캐너의 DB 범위 확인용)
numpy = "1.21.0"          # 메모리 손상 취약점 등
scikit-learn = "0.23.1"   # 하위 의존성 연쇄 취약점 테스트

# 3. 라이선스 리스크 테스트
PyMuPDF = "1.22.0"        # 강력한 전염성을 가진 AGPL-3.0 라이선스

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"